# secos

./: .gitignore  CMakeLists.txt
kernel/core/: excp.c  print.c
kernel/core/secos/: gdt.c  idt.c  os.c  page.c  syscall.c  task.c
kernel/include/: asm.h  cr.h  gpr.h  intr.h  io.h  pagemem.h  segmem.h
kernel/include/secos/: gdt.h  idt.h  os.h  page.h  syscall.h  task.h
tp0/: tp.c
tp1/: tp.c
tp2/: tp.c
tp3/: tp.c
tp4/: tp.c
tp5/: tp.c
tp_exam/: Makefile  gdbrc  tp.c
utils/: config.mk  linker.lds
